--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,12 +51,12 @@ p {
     font-size: 16px;
 }
 
-.hero img {
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     /* i moved the background image to the html code inside img tag */
-    /* background-image: url("../images/digital-marketing-meeting.jpg"); */
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
